Fixed reservation box display issues on mobile

--- a/css/pages/reservation.css
+++ b/css/pages/reservation.css
@@ -1,21 +1,13 @@
 .hero-section {
+    margin-top: 95px;
     width: 100%;
     height: 90vh;
-    background: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3)), 
+    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), 
     url('../../images/toWEBP/aboutsec3.webp') no-repeat center center/cover;
 display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 90vh;
-    background: rgba(0, 0, 0, 0.5);
 }
 
 .revservation-container {
@@ -118,4 +110,10 @@ button:hover {
     .guest-container {
         flex-direction: column;
     }
+}
+
+@media (max-height: 768px) {
+    .hero-section {
+        height: fit-content;
+    }  
 }
